2014-11-04  Matthew Hanson  <matthew_hanson@apple.com>

        Add the ability to search for modifications that are staged for commit.
        https://bugs.webkit.org/show_bug.cgi?id=138373

        Reviewed by Ryosuke Niwa and Daniel Bates.

        This makes is easy to do identify files that require merge post-processing,
        in addition to stand-alone utility.

        * Scripts/webkitpy/common/checkout/scm/git.py:
        (Git.modifications_staged_for_commit): Added.

2014-11-04  Matthew Hanson  <matthew_hanson@apple.com>

        Add a branch keyword argument to _run_git_svn_find_rev.
        https://bugs.webkit.org/show_bug.cgi?id=138372

        Reviewed by Ryosuke Niwa.

        The addition of this keyword argument allows clients to determine the Git hash
        of commits made on an SVN branch, provided that branch has been fetched locally.

        * Scripts/webkitpy/common/checkout/scm/git.py:
        (Git._run_git_svn_find_rev):
        Add a branch keyword argument that is added to the end of the command, if present.

2014-11-04  Chris Dumez  <cdumez@apple.com>

        Add ptr() method to Ref class
        https://bugs.webkit.org/show_bug.cgi?id=138361

        Reviewed by Darin Adler.

        Use the new Ref::ptr() method.

        * TestWebKitAPI/Tests/WTF/Ref.cpp:
        (TestWebKitAPI::TEST):

2014-11-04  Tibor Meszaros  <tmeszaros.u-szeged@partner.samsung.com>

        [jhbuild] Make it possible to build GTK/EFL in same repository
        https://bugs.webkit.org/show_bug.cgi?id=137448

        Reviewed by Martin Robinson.

        * Scripts/webkitdirs.pm:
        (getJhbuildPath):
        * WebKitTestRunner/InjectedBundle/efl/FontManagement.cpp:
        (getPlatformFontsPath):
        * WebKitTestRunner/InjectedBundle/gtk/ActivateFontsGtk.cpp:
        (WTR::getFontsPath):
        * jhbuild/jhbuild-wrapper:
        (determine_platform):
        (install_jhbuild):
        * jhbuild/jhbuildrc_common.py:
        (init):
