@@ -1,5 +1,17 @@
 2014-11-04  Matthew Hanson  <matthew_hanson@apple.com>
 
+        Add a way to ascertain the SVN URL associated with a Git branch.
+        https://bugs.webkit.org/show_bug.cgi?id=138374
+
+        Reviewed by Ryosuke Niwa.
+
+        The svn_url method returns the SVN URL associated with the current Git branch.
+
+        * Scripts/webkitpy/common/checkout/scm/git.py:
+        (Git.svn_url): Added.
+
+2014-11-04  Matthew Hanson  <matthew_hanson@apple.com>
+
         Add the ability to search for modifications that are staged for commit.
         https://bugs.webkit.org/show_bug.cgi?id=138373
 
